Modified the instruction as per the latest version